apps/jellyfin/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      volumes:
        - name: jellyfin-config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: jellyfin-data
          persistentVolumeClaim:
            claimName: jellyfin-data
      containers:
        - env:
          - name: PUID
            value: "65534"
          - name: PGID
            value: "100"
          - name: TZ
            value: Asia/Bangkok
          - name: JELLYFIN_UDP_SERVICE_HOST
            value: "10.0.1.102"
          - name: JELLYFIN_UDP_PORT
            value: "udp://10.0.1.102:1900"
          - name: JELLYFIN_UDP_PORT_1900_UDP
            value: "udp://10.0.1.102:1900"
          - name: JELLYFIN_UDP_PORT_7359_UDP
            value: "udp://10.0.1.102:7359"
          - name: JELLYFIN_UDP_SERVICE_PORT
            value: "1900"
          - name: JELLYFIN_UDP_SERVICE_PORT_DLNA_UDP
            value: "1900"
          - name: JELLYFIN_UDP_SERVICE_PORT_DISCOVERY_UDP
            value: "7359"
          - name: JELLYFIN_UDP_PORT_1900_UDP_PROTO
            value: "udp"
          - name: JELLYFIN_UDP_PORT_1900_UDP_ADDR
            value: "10.0.1.102"
          - name: JELLYFIN_UDP_PORT_1900_UDP_PORT
            value: "1900"
          - name: JELLYFIN_UDP_PORT_7359_UDP_PROTO
            value: "udp"
          - name: JELLYFIN_UDP_PORT_7359_UDP_ADDR
            value: "10.0.1.102"
          - name: JELLYFIN_UDP_PORT_7359_UDP_PORT
            value: "7359"
          securityContext:
            privileged: true
          image: ghcr.io/linuxserver/jellyfin
          imagePullPolicy: IfNotPresent
          name: jellyfin
          ports:
            - containerPort: 8096
              name: http-tcp
              protocol: TCP
            - containerPort: 8920
              name: https-tcp
              protocol: TCP
            - containerPort: 1900
              name: dlna-udp
              protocol: UDP
              hostPort: 1900
            - containerPort: 7359
              name: discovery-udp
              protocol: UDP
              hostPort: 7359
          resources:
            requests:
              gpu.intel.com/i915: "1"
            limits:
              gpu.intel.com/i915: "1"
          stdin: true
          tty: true
          volumeMounts:
            - mountPath: /config
              name: jellyfin-config
            - mountPath: /data
              name: jellyfin-data
      restartPolicy: Always
