apps/jellyfin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-udp
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 1900
      targetPort: 1900
      name: dlna-udp
      protocol: UDP
    - port: 7359
      targetPort: 7359
      name: discovery-udp
      protocol: UDP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: jellyfin-tcp
  annotations:
    metallb.universe.tf/allow-shared-ip: jellyfin
spec:
  selector:
    app: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
      name: http-tcp
      protocol: TCP
    - port: 8920
      targetPort: 8920
      name: https-tcp
      protocol: TCP
  type: ClusterIP
