apps/jellyfin/templates/tls-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyfin-tls-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-redirect-https@kubernetescrd
spec:
  rules:
    - host: jellyfin.picturo.us
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin-tcp
                port:
                  name: http-tcp
  tls:
    - secretName: jellyfin-tls
      hosts:
        - jellyfin.picturo.us
